--- a/TKV2025_soubory/sheet001.htm
+++ b/TKV2025_soubory/sheet001.htm
@@ -295,7 +295,7 @@ else
   <td class=xl81 style='border-top:none;border-left:none'>35 žen</td>
   <td class=xl78></td>
   <td class=xl82 style='border-top:none'>DEMLOVKA</td>
-  <td class=xl201 style='border-top:none;border-left:none'>19,63</td>
+  <td class=xl204 style='border-top:none;border-left:none'>19,63</td>
   <td class=xl128 style='border-top:none;border-left:none'>8 246 Kè</td>
   <td class=xl83 style='border-top:none;border-left:none'>Novák Radek
   [CZE049908]</td>
@@ -328,7 +328,7 @@ else
   <td class=xl84 style='border-top:none;border-left:none'>263 mužù a žen</td>
   <td class=xl78></td>
   <td class=xl82 style='border-top:none'>MADEIRA</td>
-  <td class=xl201 style='border-top:none;border-left:none'>17,21</td>
+  <td class=xl204 style='border-top:none;border-left:none'>17,21</td>
   <td class=xl128 style='border-top:none;border-left:none'>6 300 Kè</td>
   <td class=xl83 style='border-top:none;border-left:none'>Kameník Roman
   [CZE059800]</td>
@@ -360,12 +360,12 @@ else
   <td class=xl78></td>
   <td class=xl78></td>
   <td class=xl78></td>
-  <td class=xl82 style='border-top:none'>TAJFUN</td>
-  <td class=xl201 style='border-top:none;border-left:none'>12,87</td>
-  <td class=xl128 style='border-top:none;border-left:none'>5 502 Kè</td>
-  <td class=xl83 style='border-top:none;border-left:none'>Veverka František
-  [CZE003157]</td>
-  <td class=xl128 style='border-top:none;border-left:none'>1 965 Kè</td>
+  <td class=xl108 style='border-top:none'>U DEJVA</td>
+  <td class=xl204 style='border-top:none;border-left:none'>12,85</td>
+  <td class=xl128 style='border-top:none;border-left:none'>5 404 Kè</td>
+  <td class=xl83 style='border-top:none;border-left:none'>Vrzáèek Josef
+  [CZE070728]</td>
+  <td class=xl128 style='border-top:none;border-left:none'>1 930 Kè</td>
  </tr>
  <tr class=xl78 height=20 style='height:15.0pt'>
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
@@ -394,12 +394,12 @@ else
   border-bottom:.5pt solid black'>V E L K É<span style='mso-spacerun:yes'>  
   </span>F I N Á L E</td>
   <td class=xl78></td>
-  <td class=xl108 style='border-top:none'>U DEJVA</td>
-  <td class=xl201 style='border-top:none;border-left:none'>12,85</td>
-  <td class=xl128 style='border-top:none;border-left:none'>5 404 Kè</td>
-  <td class=xl83 style='border-top:none;border-left:none'>Vrzáèek Josef
-  [CZE070728]</td>
-  <td class=xl128 style='border-top:none;border-left:none'>1 930 Kè</td>
+  <td class=xl82 style='border-top:none'>TAJFUN</td>
+  <td class=xl204 style='border-top:none;border-left:none'>12,87</td>
+  <td class=xl128 style='border-top:none;border-left:none'>5 502 Kè</td>
+  <td class=xl83 style='border-top:none;border-left:none'>Veverka František
+  [CZE003157]</td>
+  <td class=xl128 style='border-top:none;border-left:none'>1 965 Kè</td>
  </tr>
  <tr class=xl78 height=20 style='height:15.0pt'>
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
@@ -426,7 +426,7 @@ else
   <td class=xl70></td>
   <td class=xl85></td>
   <td class=xl82 style='border-top:none'>MUSIC CLUB</td>
-  <td class=xl201 style='border-top:none;border-left:none'>11,52</td>
+  <td class=xl204 style='border-top:none;border-left:none'>11,52</td>
   <td class=xl128 style='border-top:none;border-left:none'>4 676 Kè</td>
   <td class=xl83 style='border-top:none;border-left:none'>Smejkal František
   [CZE071305]</td>
@@ -459,7 +459,7 @@ else
   <td class=xl86 style='border-left:none'>74 mužù</td>
   <td class=xl78></td>
   <td class=xl108 style='border-top:none'>BRTNICE</td>
-  <td class=xl201 style='border-top:none;border-left:none'>11,12</td>
+  <td class=xl204 style='border-top:none;border-left:none'>11,12</td>
   <td class=xl128 style='border-top:none;border-left:none'>4 116 Kè</td>
   <td class=xl83 style='border-top:none;border-left:none'>Vondrák Milan
   [CZE049910]</td>
@@ -491,7 +491,7 @@ else
   <td class=xl87 style='border-top:none;border-left:none'>11 žen</td>
   <td class=xl78></td>
   <td class=xl82 style='border-top:none'>PØIBYSLAV</td>
-  <td class=xl201 style='border-top:none;border-left:none'>8,13</td>
+  <td class=xl204 style='border-top:none;border-left:none'>8,13</td>
   <td class=xl128 style='border-top:none;border-left:none'>3 094 Kè</td>
   <td class=xl83 style='border-top:none;border-left:none'>Strašil Pavel
   [CZE015487]</td>
@@ -524,7 +524,7 @@ else
   <td class=xl89 style='border-top:none;border-left:none'>85 mužù a žen</td>
   <td class=xl78></td>
   <td class=xl82 style='border-top:none'>KOVÁRNA</td>
-  <td class=xl201 style='border-top:none;border-left:none'>7,45</td>
+  <td class=xl204 style='border-top:none;border-left:none'>7,45</td>
   <td class=xl128 style='border-top:none;border-left:none'>3 024 Kè</td>
   <td class=xl83 style='border-top:none;border-left:none'>Fábera Jiøí
   [CZE075508]</td>
@@ -771,8 +771,8 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
+  <td colspan=2 rowspan=2 class=xl175 style='border-right:.5pt solid black'>C H
+  Y B Í<span style='mso-spacerun:yes'>   </span>D O H R Á T</td>
   <td class=xl78></td>
   <td class=xl109 style='border-top:none'>1. místo v návštìvnosti</td>
   <td class=xl90 style='border-top:none;border-left:none'>DEMLOVKA</td>
@@ -804,8 +804,6 @@ else
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
   <td class=xl78></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
   <td class=xl109 style='border-top:none'>2. místo v návštìvnosti</td>
   <td class=xl90 style='border-top:none;border-left:none'>MADEIRA</td>
   <td class=xl128 style='border-top:none;border-left:none'>1 000 Kè</td>
@@ -835,11 +833,11 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
+  <td class=xl109>Hrací místo</td>
+  <td class=xl109 style='border-left:none'>Poèet kol</td>
   <td class=xl78></td>
   <td class=xl109 style='border-top:none'>3. místo v návštìvnosti</td>
-  <td class=xl90 style='border-top:none;border-left:none'>TAJFUN</td>
+  <td class=xl90 style='border-top:none;border-left:none'>U DEJVA</td>
   <td class=xl128 style='border-top:none;border-left:none'>500 Kè</td>
   <td class=xl78></td>
   <td class=xl78></td>
@@ -867,8 +865,8 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
+  <td class=xl109 style='border-top:none'>MADEIRA</td>
+  <td class=xl108 style='border-top:none;border-left:none'>4</td>
   <td class=xl78></td>
   <td class=xl78></td>
   <td class=xl78></td>
@@ -899,8 +897,8 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
+  <td class=xl109 style='border-top:none'>PØIBYSLAV</td>
+  <td class=xl108 style='border-top:none;border-left:none'>3</td>
   <td class=xl78></td>
   <td colspan=4 rowspan=2 class=xl175 style='border-right:.5pt solid black;
   border-bottom:.5pt solid black'>F I N A N È N Í<span
@@ -932,8 +930,8 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
+  <td class=xl109 style='border-top:none'>DEMLOVKA</td>
+  <td class=xl108 style='border-top:none;border-left:none'>0</td>
   <td class=xl78></td>
   <td class=xl78></td>
  </tr>
@@ -960,8 +958,8 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
+  <td class=xl109 style='border-top:none'>TAJFUN</td>
+  <td class=xl108 style='border-top:none;border-left:none'>0</td>
   <td class=xl78></td>
   <td colspan=2 class=xl146 style='border-right:.5pt solid black'>Muži</td>
   <td colspan=2 class=xl146 style='border-right:.5pt solid black'>Ženy</td>
@@ -990,8 +988,8 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
+  <td class=xl109 style='border-top:none'>KOVÁRNA</td>
+  <td class=xl108 style='border-top:none;border-left:none'>1</td>
   <td class=xl78></td>
   <td class=xl91>1. místo (25%)</td>
   <td class=xl129 style='border-left:none'>5 992 Kè</td>
@@ -1022,8 +1020,8 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
+  <td class=xl109 style='border-top:none'>U DEJVA</td>
+  <td class=xl108 style='border-top:none;border-left:none'>0</td>
   <td class=xl78></td>
   <td class=xl91 style='border-top:none'>2. místo (18%)</td>
   <td class=xl129 style='border-top:none;border-left:none'>4 314 Kè</td>
@@ -1054,8 +1052,8 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
+  <td class=xl109 style='border-top:none'>BRTNICE</td>
+  <td class=xl108 style='border-top:none;border-left:none'>4</td>
   <td class=xl78></td>
   <td class=xl91 style='border-top:none'>3. místo (13%)</td>
   <td class=xl129 style='border-top:none;border-left:none'>3 116 Kè</td>
@@ -1086,8 +1084,8 @@ else
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext;
   background:#B4C6E7;mso-pattern:black none'>ANO</td>
   <td class=xl70></td>
-  <td class=xl78></td>
-  <td class=xl78></td>
+  <td class=xl109 style='border-top:none'>MUSIC CLUB</td>
+  <td class=xl108 style='border-top:none;border-left:none'>1</td>
   <td class=xl78></td>
   <td class=xl108 style='border-top:none'>4. místo (10%)</td>
   <td class=xl130 style='border-top:none;border-left:none'>2 397 Kè</td>
