--- a/TKV2025_soubory/sheet006.htm
+++ b/TKV2025_soubory/sheet006.htm
@@ -129,9 +129,9 @@ else
   <td class=xl70></td>
   <td class=xl174 style='font-size:11.0pt;color:white;font-weight:700;
   text-decoration:none;text-underline-style:none;text-line-through:none;
-  font-family:Calibri, sans-serif;mso-font-charset:238;border-top:none;
-  border-right:.5pt solid windowtext;border-bottom:none;border-left:.5pt solid windowtext;
-  background:#4F81BD;mso-pattern:black none'>Poøadí</td>
+  font-family:Calibri, sans-serif;border-top:none;border-right:.5pt solid windowtext;
+  border-bottom:none;border-left:.5pt solid windowtext;background:#4F81BD;
+  mso-pattern:black none'>Poøadí</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1</td>
   <td class=xl70></td>
   <td class=xl70></td>
