--- a/TKV2025_soubory/sheet005.htm
+++ b/TKV2025_soubory/sheet005.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -95,7 +94,7 @@ else
   <td class=xl70 width=50 style='width:38pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=11 height=58 class=xl187 style='border-right:.5pt solid black;
+  <td colspan=11 height=58 class=xl190 style='border-right:.5pt solid black;
   height:43.5pt'>TOUR KRAJE VYSOÈINA 2025 - VÍTÌZOVÉ - DI</td>
   <td class=xl70></td>
   <td class=xl70></td>
