--- a/TKV2025_soubory/sheet012.htm
+++ b/TKV2025_soubory/sheet012.htm
@@ -1,5 +1,4 @@
-<html xmlns:v="urn:schemas-microsoft-com:vml"
-xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -410,7 +409,7 @@ else
   <td class=xl70 width=105 style='width:79pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl180 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl181 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOÈINA 2025 - PØIBYSLAV - 501
   DO</td>
   <td class=xl143>&nbsp;</td>
@@ -1820,7 +1819,7 @@ else
   Kè</td>
   <td class=xl70></td>
   <td class=xl71>Odmìny</td>
-  <td colspan=2 class=xl192 style='border-right:.5pt solid black;border-left:
+  <td colspan=2 class=xl195 style='border-right:.5pt solid black;border-left:
   none'>3 094 Kè</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
