--- a/TKV2025_soubory/sheet013.htm
+++ b/TKV2025_soubory/sheet013.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -45,8 +46,8 @@ else
 
 <body link=blue vlink=purple class=xl70>
 
-<table border=0 cellpadding=0 cellspacing=0 width=12904 style='border-collapse:
- collapse;table-layout:fixed;width:9695pt'>
+<table border=0 cellpadding=0 cellspacing=0 width=13001 style='border-collapse:
+ collapse;table-layout:fixed;width:9768pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
  <col class=xl70 width=205 style='mso-width-source:userset;mso-width-alt:7497;
@@ -150,8 +151,8 @@ else
  <col class=xl70 width=50 style='width:38pt'>
  <col class=xl70 width=47 style='mso-width-source:userset;mso-width-alt:1718;
  width:35pt'>
- <col class=xl70 width=80 style='mso-width-source:userset;mso-width-alt:2925;
- width:60pt'>
+ <col class=xl70 width=177 style='mso-width-source:userset;mso-width-alt:6473;
+ width:133pt'>
  <col class=xl70 width=128 style='mso-width-source:userset;mso-width-alt:4681;
  width:96pt'>
  <col class=xl70 width=50 style='width:38pt'>
@@ -335,7 +336,7 @@ else
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
-  <td class=xl70 width=80 style='width:60pt'></td>
+  <td class=xl70 width=177 style='width:133pt'></td>
   <td class=xl70 width=128 style='width:96pt'></td>
   <td class=xl70 width=50 style='width:38pt'></td>
   <td class=xl70 width=47 style='width:35pt'></td>
@@ -407,7 +408,7 @@ else
   <td class=xl70 width=128 style='width:96pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl181 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl180 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - BRTNICE - CELKOVÉ
   POŘADÍ</td>
   <td class=xl143>&nbsp;</td>
@@ -1214,13 +1215,13 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>50</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>27200</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>52</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>28100</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Průměrná účast</td>
-  <td class=xl148 style='border-top:none;border-left:none'>11,1</td>
+  <td class=xl148 style='border-top:none;border-left:none'>11,0</td>
   <td class=xl68></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1350,13 +1351,13 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
   [CZE056087]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>45</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>25950</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>47</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>26850</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Počet odehraných kol</td>
-  <td class=xl165 style='border-top:none;border-left:none'>26</td>
+  <td class=xl165 style='border-top:none;border-left:none'>27</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -1575,8 +1576,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>44</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18500</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>46</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>19400</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -1800,8 +1801,8 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>28</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>18000</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>30</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>19100</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td colspan=3 class=xl71>Žebříček vítězů</td>
@@ -2024,8 +2025,8 @@ else
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
   [CZE055580]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>29</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>17850</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>31</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>18850</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl71 style='border-top:none'>Pořadí</td>
@@ -2159,15 +2160,15 @@ else
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>38</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>16800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>40</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>17400</td>
   <td class=xl104></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
   font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
   <td class=xl82 style='border-top:none'>Čermák Jiří [CZE051443]</td>
-  <td class=xl145 style='border-left:none'>10</td>
+  <td class=xl145 style='border-left:none'>11</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
   <td class=xl70></td>
@@ -2505,9 +2506,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>30</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>15700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>34</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15800</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2593,9 +2594,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Musil Luboš [CZE050653]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1500</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>1</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1100</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -2701,9 +2704,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>32</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14700</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>30</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>15700</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
@@ -2791,9 +2794,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1400</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>2</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1100</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -2988,9 +2993,12 @@ else
   [CZE056087]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1300</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>3</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Doležal Michal
+  [CZE055580]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -3184,9 +3192,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Čermák Jiří [CZE051443]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1200</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>4</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vondrák Milan [CZE049910]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -3378,9 +3388,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>1000</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>5</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Vala Tomáš [CZE076565]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -3487,9 +3499,9 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>12</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Jenšík Ondřej [CZE057906]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6800</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Švaříček Jiří [CZE049507]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>16</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>7500</td>
   <td class=xl70></td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3572,9 +3584,12 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Pivoňka Pavel [CZE001936]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Brussmann Jiří
+  [CZE056087]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>900</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -3681,8 +3696,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>13</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Švaříček Jiří [CZE049507]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>14</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Jenšík Ondřej [CZE057906]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>10</td>
   <td class=xl65 style='border:.5pt solid windowtext'>6800</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -3765,9 +3780,11 @@ else
   <td class=xl65 style='border:.5pt solid windowtext'>Musil Daniel [CZE060863]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>800</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>7</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Švaříček Jiří [CZE049507]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -3959,9 +3976,11 @@ else
   [WRD080011]</td>
   <td class=xl65 style='border:.5pt solid windowtext'>700</td>
   <td class=xl70></td>
-  <td class=xl94></td>
-  <td class=xl70></td>
-  <td class=xl70></td>
+  <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
+  text-decoration:none;text-underline-style:none;text-line-through:none;
+  font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Votava Michal [CZE053229]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>600</td>
   <td class=xl70></td>
   <td class=xl94 style='font-size:11.0pt;color:black;font-weight:400;
   text-decoration:none;text-underline-style:none;text-line-through:none;
@@ -4907,8 +4926,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>20</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Daniel Michal [CZE075751]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>8</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Navrkal Filip [CZE054629]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
   <td class=xl65 style='border:.5pt solid windowtext'>3400</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -5060,8 +5079,8 @@ else
   <td height=20 class=xl78 style='height:15.0pt;font-size:11.0pt;color:windowtext;
   font-weight:400;text-decoration:none;text-underline-style:none;text-line-through:
   none;font-family:Calibri, sans-serif;mso-font-charset:238;border:.5pt solid windowtext'>21</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>Navrkal Filip [CZE054629]</td>
-  <td class=xl65 style='border:.5pt solid windowtext'>6</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>Daniel Michal [CZE075751]</td>
+  <td class=xl65 style='border:.5pt solid windowtext'>8</td>
   <td class=xl65 style='border:.5pt solid windowtext'>3400</td>
   <td class=xl70></td>
   <td class=xl70></td>
@@ -14935,7 +14954,7 @@ else
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
-  <td width=80 style='width:60pt'></td>
+  <td width=177 style='width:133pt'></td>
   <td width=128 style='width:96pt'></td>
   <td width=50 style='width:38pt'></td>
   <td width=47 style='width:35pt'></td>
