--- a/TKV2025_soubory/sheet009.htm
+++ b/TKV2025_soubory/sheet009.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -409,7 +410,7 @@ else
   <td class=xl70 width=109 style='width:82pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl181 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl180 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - DEMLOVKA - 501 DO</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
@@ -1818,7 +1819,7 @@ else
   290 Kč</td>
   <td class=xl70></td>
   <td class=xl71>Odměny</td>
-  <td colspan=2 class=xl195 style='border-right:.5pt solid black;border-left:
+  <td colspan=2 class=xl194 style='border-right:.5pt solid black;border-left:
   none'>8 246 Kč</td>
   <td class=xl70></td>
   <td class=xl99>&nbsp;</td>
