--- a/TKV2025_soubory/sheet017.htm
+++ b/TKV2025_soubory/sheet017.htm
@@ -1,4 +1,5 @@
-<html xmlns:o="urn:schemas-microsoft-com:office:office"
+<html xmlns:v="urn:schemas-microsoft-com:vml"
+xmlns:o="urn:schemas-microsoft-com:office:office"
 xmlns:x="urn:schemas-microsoft-com:office:excel"
 xmlns="http://www.w3.org/TR/REC-html40">
 
@@ -406,7 +407,7 @@ else
   <td class=xl70 width=90 style='width:68pt'></td>
  </tr>
  <tr height=58 style='height:43.5pt'>
-  <td colspan=14 height=58 class=xl181 style='height:43.5pt'><span
+  <td colspan=14 height=58 class=xl180 style='height:43.5pt'><span
   style='mso-spacerun:yes'> </span>TOUR KRAJE VYSOČINA 2025 - U DEJVA - 301 DI</td>
   <td class=xl143>&nbsp;</td>
   <td class=xl143>&nbsp;</td>
